syntax = "proto3";
package mobiuspace.adx.log.detail.base  ;
message AdxDeviceContext {
  string udId = 1;
  string androidId = 2 ;
  string gaId = 3 ;
  string imei = 4;
  string brand = 5 ;
  string make = 6 ;
  string os = 7 ;
  string language = 8 ;
  Geo geo = 9 ;
}

message Geo {
  double lat = 1 ;
  double lon = 2 ;
  string country = 3 ;
}