syntax = "proto3";
package mobiuspace.adx.log.detail.base  ;
message AdxUserContext {
  string keywords = 1 ;
  int32 yob = 2 ;
  string gender = 3 ;
}