syntax = "proto3";
package mobiuspace.adx.log.detail.body ;
import "base/adx_demand_context.proto";
//dsp 响应日志实体
message AdxDemandResponse {
  base.AdxDemandContext demandContext = 1 ;
  ResponseBody body = 2 ;
  int32 httpCode = 3 ;
}

message ResponseBody {
  string cur = 1 ;
  double price = 2 ;
  string bundle = 3 ; //倾向 被广告的应用的唯一ID，可以是包名或者其他信息
  repeated string adomain = 4 ; //广告主黑名单
}

