syntax = "proto3";
package mobiuspace.adx.log.detail.body ;

//流量请求日志实体
message AdxSupplyRequest {

}





